# graficaP3

./: CMakeLists.txt  Node.h  Triangle.h  a.out  coords.txt  coords2.txt  coords3.txt  coords4.txt  coords5.txt  glad.c  normal_mapping.cpp  read_txt.cpp  segmentation.py  tags  test_mapping.cpp
